<resources>
    <string name="app_name">Edvora</string>
    <string name="user_name">Dhruv Singh</string>
    <string name="ride_title">Rides:</string>
    <string name="filter_title">Filters</string>
    <string name="city_placeholder">City Name</string>
    <string name="state_placeholder">State Name</string>
    <string name="ride_id_placeholder">Ride Id: 002</string>
    <string name="origin_station_placeholder">Origin Station: 20</string>
    <string name="station_path_placeholder">Station Path: [20, 39, 40, 42, 54, 63, 72, 88, 98]</string>
    <string name="date_placeholder">Date: 15th Feb 2022 16:33</string>
    <string name="distance_placeholder">Distance: 0</string>
    <string name="ride_id">Ride Id:&#160;</string>
    <string name="origin_station">Origin Station:&#160;</string>
    <string name="station_path">Station Path:&#160;</string>
    <string name="date">Date:&#160;</string>
    <string name="distance">Distance:&#160;</string>
    <string name="project_api">https://assessment.api.vweb.app/rides</string>
    <string name="state">State</string>
    <string name="city">City</string>
</resources>


