<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/card_layout_curve"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="148dp">

        <ImageView
            android:id="@+id/locationImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityTextView"
            android:textSize="12sp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:text="@string/city_placeholder"
            android:background="@drawable/city_state_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/stateTextView"
            android:textSize="12sp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:text="@string/state_placeholder"
            android:background="@drawable/city_state_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/rideIdTextView"
        android:textSize="18sp"
        android:text="@string/ride_id"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/originStationTextView"
        android:textSize="18sp"
        android:text="@string/origin_station"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/stationPathTextView"
        android:textSize="18sp"
        android:text="@string/station_path"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/dateTextView"
        android:textSize="18sp"
        android:text="@string/date"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/distanceTextView"
        android:textSize="18sp"
        android:text="@string/distance"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>


